responsiveness overflow fixed on home page

--- a/documentation/src/pages/index.module.css
+++ b/documentation/src/pages/index.module.css
@@ -106,6 +106,7 @@
   font-size: 24px;
   font-weight: bold;
   padding: 18px 45px;
+  margin-left: 20px;
 }
 
 .indexTryMeButton:hover {
@@ -168,6 +169,12 @@
 
   .indexCtas {
     justify-content: center;
+    flex-direction: column;
+  }
+
+  .indexTryMeButton {
+    margin-top: 20px;
+    margin-left: 0px;
   }
 
   .indexCtasGitHubButton {
